Add initial visual design draft for user interface in concept document

--- a/conception/conception.ipynb
+++ b/conception/conception.ipynb
@@ -76,6 +76,8 @@
     "Begleitend zur Karte werden **Schlüsselkennzahlen** eingeblendet: erwartete Temperaturänderung von heute bis 2050, Anzahl der Hitzetage pro Jahr, Anteil potenziell überfluteter Fläche. Ein **Zeit‑Slider** erlaubt es, Entwicklungen von der Vergangenheit bis 2050 nachzuvollziehen.  \n",
     "Ein zentraler Hebel ist der **Szenario‑Switch**: Mit einem Klick lässt sich zwischen einem „Weiter‑wie‑bisher“-Pfad und einem Klimaziel‑Szenario wechseln. Die Karte verändert sich sofort – und macht sichtbar, wie sehr heutige Entscheidungen die Risiken von morgen beeinflussen.\n",
     "\n",
+    "Hier ist ein erster visueller Entwurf der geplanten Benutzeroberfläche. Die in der Grafik dargestellten Daten und Beschriftungen sind exemplarisch und dienen lediglich als Platzhalter zur Veranschaulichung des Layouts.\n",
+    "\n",
     "![image-2.png](attachment:image-2.png)"
    ]
   }
